[gd_scene load_steps=19 format=3 uid="uid://bcpw8l6frx651"]

[ext_resource type="Script" uid="uid://bis2kgpadpvhm" path="res://Scenes/PCUI/pcui.gd" id="1_yina7"]
[ext_resource type="PackedScene" uid="uid://brb2acniqq2i8" path="res://Scenes/PCUI/CMD.tscn" id="3_bxve3"]
[ext_resource type="Texture2D" uid="uid://26clwvg21oq4" path="res://Assets/2D Assets/Icons/5.png" id="3_xtwrv"]
[ext_resource type="Texture2D" uid="uid://bn3rafu1aqce0" path="res://Assets/2D Assets/Icons/Aircrackng.png" id="4_l61ky"]
[ext_resource type="Texture2D" uid="uid://b51veipknpxrw" path="res://Scenes/PCUI/background.png" id="4_lkbei"]
[ext_resource type="Texture2D" uid="uid://v643wpg8naa4" path="res://Scenes/PCUI/powerButton.jpeg" id="5_mlvvv"]
[ext_resource type="Texture2D" uid="uid://cb0rmoutjov5c" path="res://Assets/2D Assets/Icons/3.png" id="5_qp7xw"]
[ext_resource type="FontFile" uid="uid://db16gjjdg8f7x" path="res://Assets/Fonts/VT323-Regular.ttf" id="6_kmxmb"]
[ext_resource type="Texture2D" uid="uid://bddwnxiqkex6y" path="res://Assets/2D Assets/Icons/ettercap.png" id="6_nm78k"]
[ext_resource type="Texture2D" uid="uid://c4bndga47361e" path="res://Assets/2D Assets/Icons/logo.png" id="7_1wrfy"]
[ext_resource type="PackedScene" uid="uid://dvyuvwdvk0tbj" path="res://AirCreck.tscn" id="7_autvq"]
[ext_resource type="Texture2D" uid="uid://dvmlijjgrjrxt" path="res://Scenes/PCUI/Icons/Browser.png" id="8_w5hxt"]
[ext_resource type="Texture2D" uid="uid://p8ycfnjir1wq" path="res://Assets/2D Assets/Icons/7.png" id="9_q524b"]
[ext_resource type="PackedScene" uid="uid://da0je3bmb4hp0" path="res://Scenes/PCUI/Notepad.tscn" id="9_qp7xw"]
[ext_resource type="PackedScene" uid="uid://ctpwqpgosom54" path="res://Scenes/PCUI/etter_cap.tscn" id="11_1wrfy"]
[ext_resource type="PackedScene" uid="uid://cn63y8p0w6qjk" path="res://Scenes/PCUI/discord.tscn" id="14_ppt72"]
[ext_resource type="PackedScene" uid="uid://ctxt2mrdrdeet" path="res://Scenes/PCUI/Site/login_site.tscn" id="16_pbsi7"]
[ext_resource type="PackedScene" uid="uid://dx6yuj0ej7ic7" path="res://Scenes/PCUI/shop.tscn" id="17_3u63p"]

[node name="PCUI" type="CanvasLayer"]

[node name="PCUI" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yina7")

[node name="TextureRect" type="TextureRect" parent="PCUI"]
z_index = -1
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_lkbei")

[node name="ButtonsCont" type="MarginContainer" parent="PCUI"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
offset_left = 96.0
offset_top = 100.0
offset_right = 232.0
offset_bottom = 516.0

[node name="VBoxContainer" type="VBoxContainer" parent="PCUI/ButtonsCont"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PCUI/ButtonsCont/VBoxContainer"]
layout_mode = 2

[node name="CMD" type="Button" parent="PCUI/ButtonsCont/VBoxContainer/HBoxContainer"]
z_index = 100
layout_mode = 2
toggle_mode = true
icon = ExtResource("3_xtwrv")

[node name="aircrack" type="Button" parent="PCUI/ButtonsCont/VBoxContainer/HBoxContainer"]
z_index = 100
layout_mode = 2
icon = ExtResource("4_l61ky")

[node name="notepad" type="Button" parent="PCUI/ButtonsCont/VBoxContainer/HBoxContainer"]
z_index = 100
layout_mode = 2
text = "


"
icon = ExtResource("5_qp7xw")

[node name="etter_cap" type="Button" parent="PCUI/ButtonsCont/VBoxContainer/HBoxContainer"]
z_index = 100
layout_mode = 2
icon = ExtResource("6_nm78k")

[node name="discord" type="Button" parent="PCUI/ButtonsCont/VBoxContainer/HBoxContainer"]
z_index = 100
layout_mode = 2
icon = ExtResource("7_1wrfy")

[node name="btowser" type="Button" parent="PCUI/ButtonsCont/VBoxContainer/HBoxContainer"]
z_index = 100
layout_mode = 2
icon = ExtResource("8_w5hxt")

[node name="e_shop" type="Button" parent="PCUI/ButtonsCont/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("9_q524b")

[node name="AirCreck" parent="PCUI" instance=ExtResource("7_autvq")]
visible = false
layout_mode = 2
anchors_preset = 0
offset_top = 8.0
offset_right = -40.2039
offset_bottom = 111.76
grow_horizontal = 1
grow_vertical = 1

[node name="CMD" parent="PCUI" instance=ExtResource("3_bxve3")]
visible = false
layout_mode = 1
offset_right = -1216.0
offset_bottom = -616.0

[node name="Notepad" parent="PCUI" instance=ExtResource("9_qp7xw")]
visible = false
layout_mode = 1

[node name="powerButton" type="Button" parent="PCUI"]
layout_mode = 2
offset_left = 1865.0
offset_top = 1.0
offset_right = 1905.0
offset_bottom = 41.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("5_mlvvv")
icon_alignment = 1

[node name="Help_UI" type="Control" parent="PCUI"]
z_index = 100
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Help_Text" type="Label" parent="PCUI/Help_UI"]
z_index = 102
layout_mode = 0
offset_left = 1580.0
offset_top = 60.0
offset_right = 1857.0
offset_bottom = 260.0
scale = Vector2(1.2, 1.2)
theme_override_fonts/font = ExtResource("6_kmxmb")
theme_override_font_sizes/font_size = 24
text = "Help Text"

[node name="EtterCap" parent="PCUI" instance=ExtResource("11_1wrfy")]
visible = false
layout_mode = 1

[node name="Discord" parent="PCUI" instance=ExtResource("14_ppt72")]
visible = false
layout_mode = 1

[node name="LoginSite" parent="PCUI" instance=ExtResource("16_pbsi7")]
visible = false
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = -1002.0
offset_bottom = -490.0

[node name="Shop" parent="PCUI" instance=ExtResource("17_3u63p")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PCUI/ButtonsCont/VBoxContainer/HBoxContainer/CMD" to="PCUI" method="_on_cmd_pressed"]
[connection signal="pressed" from="PCUI/ButtonsCont/VBoxContainer/HBoxContainer/aircrack" to="PCUI" method="_on_aircrack_pressed"]
[connection signal="pressed" from="PCUI/ButtonsCont/VBoxContainer/HBoxContainer/notepad" to="PCUI" method="_on_notepad_pressed"]
[connection signal="pressed" from="PCUI/ButtonsCont/VBoxContainer/HBoxContainer/etter_cap" to="PCUI" method="_on_etter_cap_pressed"]
[connection signal="pressed" from="PCUI/ButtonsCont/VBoxContainer/HBoxContainer/discord" to="PCUI" method="_on_discord_pressed"]
[connection signal="pressed" from="PCUI/ButtonsCont/VBoxContainer/HBoxContainer/btowser" to="PCUI" method="_on_btowser_pressed"]
[connection signal="pressed" from="PCUI/ButtonsCont/VBoxContainer/HBoxContainer/e_shop" to="PCUI" method="_on_e_shop_pressed"]
[connection signal="pressed" from="PCUI/powerButton" to="PCUI" method="_on_power_button_pressed"]
